--- a/style.css
+++ b/style.css
@@ -3,373 +3,205 @@
 }
 
 header {
-    display: flex;
-    justify-content: center;   
-    width: 1920px;
-    height: 80px;
-    align-items: center;
-    position: fixed;
-    z-index: 1;
-    background-color: #FFFFFF;
-    border-bottom: 1.5px solid rgba(0, 0, 0, 0.5);
-    box-shadow: 0px 4px 28px rgba(0, 0, 0, 0.04);
+    background-color: #ffffff;
+    box-shadow: 0px 4px 32px rgba(0, 0, 0, 0.05);
+    gap: 10px;
 }
 
-.headerCont {
-    display: flex;
-    flex-direction: row;
-    align-items: flex-start;
-    padding: 0px;
-    gap: 60px;
-    position: center;
-    height: 63px;
-    top: 40px;
+body {
+    background-color: #f5f5f5;
+    min-width: 1200px;
+    margin: 0px;
 }
 
-.mainInfoCont {
+a {
+    text-decoration: none;
+    color: #000;
+}
+
+h1, h2, h3, h4, p {
+    margin: 0px;
+}
+
+h1, h2, h3 {
+    font-family: 'Onest';
+}
+
+h1 {
+    font-size: 36px;
+    font-weight: 800;
+    padding-bottom: 30px;
+}
+
+h2 {
+    padding-bottom: 30px;
+    font-size: 30;
+    font-weight: 700;
+}
+
+h3 {
+    font-size: 22px;
+    padding-bottom: 15px;
+}
+
+p {
+    font-family: 'Georgia';
+    font-size: 22px;
+    line-height: 135%;
+    padding-bottom: 15px;
+}
+
+.closing {
+    padding-bottom: 0px;
+}
+
+.example {
+    opacity: 70%;
+}
+
+.subheadText {
+    font-family: 'Onest';
+    font-size: 28px;
+    font-style: normal;
+    font-weight: 300;
+}
+
+header .links li {
+    display: inline-block;
+    font-family: 'Noto Serif';
+    font-size: 24px;
+    padding: 8px 30px;
+}
+
+header .links li a {
+    transition: all 0.7 ease;
+}
+
+header .links li a:hover {
+    color: #B297FF;
+}
+
+.links {
+    display: flex;
+    justify-content: center;
+    padding: 15px 0px;
+    gap: 10px;
+}
+
+.container {
+    width: 1200px;
+    padding: 0px 20px;
+    margin: 0 auto;
+}
+
+#main {
+    margin-top: 40px;
+    margin-bottom: 20px;
+}
+
+#content {
+    margin-bottom: 20px;
+}
+
+.subInfo {
     display: flex;
     flex-direction: column;
-    align-items: flex-start;
-    width: 1200px;
-    margin-top: 120px;
-    margin-left: 380px;
-    margin-bottom: 120px;
     gap: 20px;
 }
 
-.weird {
+.set {
+    background-color: #ffffff;
+    padding: 40px;
+    box-shadow: 0px 4px 28px rgba(0, 0, 0, 0.05);
+    border-radius: 12px;
+}
+
+.block {
+    margin-bottom: 50px;
+}
+
+.closingBlock {
+    margin-bottom: 0px;
+}
+
+.holder {
+    padding: 15px 25px;
+    background-color: #FFF1F1;
+    border-left: 3px solid #FF9C9C;
+    margin-bottom: 15px;
+}
+
+.holder p {
+    padding-bottom: 0px;
+}
+
+.markableBig {
     display: flex;
-    flex-direction: column;
     justify-content: center;
-    align-items: center;
-    padding: 117px 10px;
-    gap: 10px;
-    width: 90px;
-    height: 234px;
+    width: 240px;
+    font-family: 'Onest';
+    font-size: 16px;
+    color: #ffffff;
+    padding: 8px 10px;
+    border-radius: 8px;
+    background-color: #2C2C2C;
+    margin-bottom: 15px;
 }
 
-.arrow {
-    border: 20px solid transparent;
-    display: inline-flex;
-    border-left: 20px solid gray;
-    border-right: none;
-
-
-  
-    /*width: 70px;
-    height: 0px;
-    border: 4.5px solid rgba(0, 0, 0, 0.7);
-    cursor: pointer;*/
+.marker {
+    padding: 2px;
 }
 
-button:hover .dropdown-content,
-button:focus .dropdown-content {
-    display: block;
+.langGroup {
+    display: flex;
+    gap: 30px;
+    margin-bottom: 15px;
 }
 
-.roflLine {
-    width: 100%;
+.partHolder {
+    padding: 15px 20px;
+}
+
+.line {
     height: 0px;
     border: 1.5px solid rgba(0, 0, 0, 0.5);
 }
 
-body {
-    margin-top: 260px;
-    background: #F7F7F7;
-    margin: 0 auto;
-    overflow-x: hidden;
-}
-
-button {
+.navig {
     display: flex;
-    flex-direction: row;
-    justify-content: center;
     align-items: center;
-
-    font-family: 'Georgia';
-    font-style: normal;
-    font-weight: 400;
-    font-size: 24px;
-    padding: 18px 0px;
-    gap: 10px;
-    background-color: #FFFFFF;
-    border: none;
-}
-
-.headerText {
-    font-weight: 600;
-    color:#000000;
-}
-
-section {
-    max-width: 1200px;
-    padding-top: 100px;
-    /*padding-left: 720px;*/
-    margin: 0 auto;
-}
-
-a, a:visited{
-    color: #000000;
-    text-decoration: none;
-}
-
-h1, h2, h3, p {
-    margin: 0px;
-}
-
-h1 {
-    font-family: 'Onest';
-    font-style: normal;
-    font-weight: 700;
-    font-size: 44px;
-    line-height: 56px;
-    color: #000000;
-}
-
-h2 {
-    font-family: 'Georgia';
-    font-style: normal;
-    font-weight: 700;
-    font-size: 32px;
-    line-height: 130%;
-}
-
-h3 {
-    font-family: 'Onest';
-    font-style: normal;
-    font-weight: 600;
-    font-size: 24px;
-    line-height: 130%; 
-    color: rgba(0, 0, 0, 0.85);
-}
-
-p {
-    font-family: 'Onest';
-    font-style: normal;
-    font-weight: 400;
-    font-size: 22px;
-    line-height: 135%;
-}
-
-.t {
-    font-family: 'Georgia';
-}
-
-.contain {
-    display: flex;
-    margin-left: 476px;
-    max-width: 968px;
-    flex-direction: row;
-    align-items: center;
-    gap: 180px;
-    border-top: 1.5px solid rgba(0, 0, 0, 0.5);
-    transition: transform 0.3s ease-in-out;
-}
-
-.contain:hover {
-    transform: translateX(15px);
-}
-
-.textline {
-    font-weight: 700;
-    font-size: 36px;
-}
-
-.textCont {
-    display: flex;
-    padding: 30px 0px;
-    flex-direction: column;
-    align-items: flex-start;
-    gap: 20px;
-    width: 700px;
-}
-
-.sublineCont {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    padding: 0px;
     gap: 15px;
 }
 
-.tagCont {
+.navButton {
+    padding: 10px 28px 10px 18px;
     display: flex;
-    flex-direction: row;
-    align-items: flex-start;
-    padding: 0px;
-    gap: 15px;
+    gap: 8px;
 }
 
-.tagline {
-    display: flex;
-    flex-direction: row;
-    align-items: flex-start;
-    padding: 0px;
-    gap: 15px;
+.navButton:hover .polygon {
+    transform: translate(6px);
 }
 
-.tagholder, .tagholder2, .tagholder3, .tagholder4 {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    padding: 8px 25px;
-    gap: 10px;  
-    border-radius: 15px;
+#phonetics {
+    width: 182px;
+    background-color: #EBFFEA;
 }
 
-.tagholder {
-    background: #FFEAEA;
-    border-radius: 15px;
+#grammatics {
+    width: 206px;
+    background-color: #EAEAFF;
 }
 
-.tagholder2 {
-    background: #E5E5E5;
-    box-shadow: 0px 4px 32px rgba(0, 0, 0, 0.05);
-    border-radius: 15px;
-}
-
-.tagholder3 {
-    background: #EBFFEA;
-}
-
-.tagholder4 {
-    background: #EAEAFF;
-}
-
-.subline {
-    font-size: 28px;
-    max-width: 975px;
-    color: rgba(0, 0, 0, 0.7);
-}
-
-.htUpCont {
-    gap: 50px;
-}
-
-.htCont {
-    margin-top: 60px;
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    padding: 0px;
-    gap: 120px;
-    margin-bottom: 180px;
-}
-
-.htText {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    padding: 0px;
-    gap: 20px;
-    
-}
-
-.subheadCont {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    padding: 0px;
-    gap: 20px;
-}
-
-.sub {
-    font-family: 'Onest';
-    font-style: normal;
-    font-weight: 300;
-    font-size: 30px;
-    line-height: 135%;
-}
-
-.Line {
-    z-index: -1;
-    box-sizing: border-box;
-    position: absolute;
-    width: 1920px;
-    height: 600px;
-    left: 0px;
-    top: 0px;
-    background: #FFFFFF;
-    opacity: 0.16;
-    border-bottom: 2px solid #000000;
-    box-shadow: 0px 4px 28px rgba(0, 0, 0, 0.08);
-}
-
-.main {
-    max-width: 1000px;
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    padding: 0px;
-    gap: 50px;
-    margin: 0 auto;
-    /*left: calc(50% - 1000px/2);*/
-    top: 687px;
-    margin-bottom: 60px;
-}
-
-.s1_mCont {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    padding: 0px;
-    gap: 15px;
-}
-
-.s1_sCont {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    padding: 0px;
-    gap: 20px;
-}
-
-.s1_ssCont {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    padding: 0px;
-    gap: 30px;
-}
-
-.s1Text {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    padding: 0px;
-    gap: 10px;
-}
-
-.s1PerformText {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    padding: 0px;
-    gap: 20px;
-}
-
-.shape {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    padding: 15px 30px;
-    gap: 10px;
-    border-left: 3px solid #000000;
+.polygon {
+    border-top: 12px solid transparent;
+    border-left: 24px solid #9CFF97;
+    border-bottom: 12px solid transparent;
+    border-radius: 2px;
+    transition: all 0.3s ease;
 }
 
 footer {
-    width: 1000px;
-    margin: 0 auto;
-    height: 60px;
+    margin-bottom: 120px;
 }
 
-div {
-    /*display: flex;*/
-    /* width: 1200px; */
-    /* height: 1080px; */
-    /* padding-bottom: 1062px; */
-    /*flex-direction: column;
-    align-items: center;
-    vertical-align:middle; */
-}
