--- a/style.css
+++ b/style.css
@@ -44,6 +44,13 @@ h3 {
     padding-bottom: 15px;
 }
 
+h4 {
+    font-family: 'Georgia';
+    font-weight: 400;
+    font-size: 36px;
+    padding-bottom: 20px;
+}
+
 p {
     font-family: 'Georgia';
     font-size: 22px;
@@ -68,7 +75,7 @@ p {
 
 header .links li {
     display: inline-block;
-    font-family: 'Noto Serif';
+    font-family: 'Onest';
     font-size: 24px;
     padding: 8px 30px;
 }
@@ -99,6 +106,12 @@ header .links li a:hover {
     margin-bottom: 20px;
 }
 
+#altMain {
+    background-color: #ffffff;
+    padding-top: 130px;
+    padding-bottom: 130px;
+}
+
 #content {
     margin-bottom: 20px;
 }
@@ -120,9 +133,9 @@ header .links li a:hover {
     margin-bottom: 50px;
 }
 
-.closingBlock {
+/*.closingBlock {
     margin-bottom: 0px;
-}
+}*/
 
 .holder {
     padding: 15px 25px;
@@ -162,6 +175,33 @@ header .links li a:hover {
     padding: 15px 20px;
 }
 
+.linkCont {
+    display: flex;
+    align-items: center;
+    padding-top: 30px;
+    padding-bottom: 30px;
+    gap: 400px;
+    border-top: 2px solid rgba(0, 0, 0, 0.5);
+}
+
+.linkCont:hover .arrow {
+    transform: translate(20px);
+}
+
+.mini, .altMini {
+    /*display: flex;*/
+    padding: 8px 25px 8px 25px;
+    border-radius: 15px;
+}
+
+.mini {
+    box-shadow: 0px 4px 32px rgba(0, 0, 0, 0.05);
+}
+
+.altMini {
+    background-color: #E6E6E6;
+}
+
 .line {
     height: 0px;
     border: 1.5px solid rgba(0, 0, 0, 0.5);
@@ -183,6 +223,16 @@ header .links li a:hover {
     transform: translate(6px);
 }
 
+#vocabulary, #phonetics, #grammatics {
+    box-shadow: 0px 4px 32px rgba(0, 0, 0, 0.04);
+    border-radius: 8px;
+}
+
+#vocabulary {
+    width: 166px;
+    background-color: #FFEAEA;
+}
+
 #phonetics {
     width: 182px;
     background-color: #EBFFEA;
@@ -199,6 +249,15 @@ header .links li a:hover {
     border-bottom: 12px solid transparent;
     border-radius: 2px;
     transition: all 0.3s ease;
+}
+
+.arrow {
+    border: 20px solid transparent;
+    display: inline-flex;
+    border-left: 20px solid gray;
+    border-right: none;
+    height: 24px;
+    transition: all 0.4s ease;
 }
 
 footer {
